[package]
name = "tcp-handler"
version = "0.5.3"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "Conveniently transfer data in chunk through tokio TCP stream."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/tcp-handler/"
documentation = "https://docs.rs/tcp-handler/"
categories = ["network-programming"]
keywords = ["tcp", "tokio", "bytes", "io", "network"]

[dependencies]
thiserror = "^1"
once_cell = "^1"
tokio = "^1"
bytes = "^1"
variable-len-reader = { version = "^3.1", default-features = false, features = ["std", "tokio-comp", "bytes",
    "async_raw", "async_bools", "async_varint_size", "async_string"] }

flate2 = { version = "^1.0", optional = true }
rsa = { version = "~0.9", default-features = false, features = ["std"], optional = true }
aes-gcm = { version = "~0.10", default-features = false, features = ["std", "aes", "rand_core"], optional = true }
sha2 = { version = "~0.10", default-features = false, features = ["std"], optional = true }
serde = { version = "^1", features = ["derive"], optional = true }

[profile.dev.package.num-bigint-dig]
opt-level = 3 # Speed up rsa key gen.

[features]
default = ["compression_encrypt"]

compression = ["dep:flate2"]
encryption = ["dep:rsa", "dep:aes-gcm", "dep:sha2", "tokio/sync"]
compression_encrypt = ["compression", "encryption"]

serde = ["dep:serde"]

[build-dependencies]
reportme = ">=0.2"

[dev-dependencies]
anyhow = "^1.0"
tokio = { version = "^1.35", features = ["macros", "io-util", "rt-multi-thread", "net"] }
variable-len-reader = { version = "^3", features = ["full"] }

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
